--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,17 @@ po/*~
 
 # RStudio Connect folder
 rsconnect/
+
+# html files
+*.html
+
+# directories storing rendering files
+README_files/*
+template_files/*
+
+# assets created in root directory
+./ADFG-logo.png  
+./SoA-background.jpeg
+
+# r script for making template gif
+make-template-example-gif.r
