--- a/.gitignore
+++ b/.gitignore
@@ -57,7 +57,7 @@ template_files/*
 
 # assets created in root directory
 ADFG-logo.png  
-SoA-background.jpeg
+SoA-background.jpg
 
 # r script for making template gif
 make-template-example-gif.r
