--- a/_extensions/ADFG-theme/_extension.yml
+++ b/_extensions/ADFG-theme/_extension.yml
@@ -1,12 +1,12 @@
 title: ADFG Theme
-author: John Doe
+author: CL Roberts
 institute: Alaska Department of Fish \& Game
 version: 1.0.0
 quarto-required: ">=1.3.0"
 contributes:
   formats:
     revealjs:
-      theme: [default, SoA_theme.scss]
+      theme: [default, ADFG-theme.scss]
       format-resources:
         - SoA-background.jpg
         - ADFG-logo.png
