added features to scss file

--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,7 @@ template_files/*
 # assets created in root directory
 ADFG-logo.png  
 SoA-background.jpg
+AK-flag.svg
 
 # r script for making template gif
 make-template-example-gif.r
