--- a/_extensions/ADFG-theme/_extension.yml
+++ b/_extensions/ADFG-theme/_extension.yml
@@ -10,5 +10,6 @@ contributes:
       format-resources:
         - SoA-background.jpg
         - ADFG-logo.png
+        - AK-flag.svg
 echo: false
 eval: true
