--- a/_extensions/ADFG-presentation/_extension.yml
+++ b/_extensions/ADFG-presentation/_extension.yml
@@ -1,4 +1,4 @@
-title: ADFG Theme
+title: ADFG-themed Presentation
 author: CL Roberts
 institute: Alaska Department of Fish \& Game
 version: 1.0.0
@@ -6,7 +6,7 @@ quarto-required: ">=1.3.0"
 contributes:
   formats:
     revealjs:
-      theme: [default, ADFG-theme.scss]
+      theme: [default, ADFG-presentation.scss]
       format-resources:
         - SoA-background.jpg
         - ADFG-logo.png
